# anysnake2

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.prefs  develop_in_loop.sh  faq.txt  flake.nix  todo.txt
.github/workflows/: build_release.yml
dev/: activate_github_token.fish
example/: anysnake2.toml  run.py
examples/basic/: anysnake2.toml  pandas_version.ipynb  pandas_version.md
examples/basic/.ipynb_checkpoints/: pandas_version-checkpoint.ipynb
examples/debug_python_editable_venv_path_finder/: anysnake2.toml  t.txt
examples/dev/: anysnake2.toml  run.py
examples/docker/: anysnake2.toml
examples/flake_auto_rev/: anysnake2.toml
examples/flake_in_non_root_github/: anysnake2.toml
examples/flake_in_non_root_github/no-home/: .bash_history
examples/flake_subdependency/: anysnake2.toml
examples/flake_subdependency/after/: .gitignore  flake.nix  functions.nix
examples/flake_subdependency/before/: flake.nix
examples/full/: anysnake2.toml
examples/full_25.11/: anysnake2.toml  t.txt
examples/github_tarballs_can_be_unstable/: anysnake2.toml
examples/jupyter7/: anysnake2.toml
examples/just_python/: anysnake2.toml  req.txt  test.toml
examples/just_python/example-cli-python/: .gitignore
examples/just_python_discover_newest_revision/: anysnake2.toml  json  json2  t.txt
examples/just_python_package_from_flake/: anysnake2.toml
examples/just_python_package_from_pypi/: anysnake2.toml
examples/just_python_poetry2nix_escape_hatch/: anysnake2.toml
examples/just_python_poetry2nix_escape_hatch/example-cli-python/: README.rst
examples/just_python_trust_on_first_use/: anysnake2.toml  anysnake2.toml.backup  test.toml
examples/just_python_trust_on_first_use/example-cli-python/: setup.py
examples/just_r/: anysnake2.toml  t.txt
examples/minimal/: anysnake2.toml
examples/minimal_rust/: anysnake2.toml
examples/python_310_nixpkgs_2205/: anysnake2.toml
examples/python_buildPackage_interdependency_with_overrides/: anysnake2.toml
examples/python_buildPackage_interdependency_with_overrides/.anysnake2_flake_old/: .gitignore  flake.nix
examples/test_python_editable_venv_path/: anysnake2.toml
examples/test_python_pulled_by_other_editable/: anysnake2.toml
experimental_machnix_replacements/: proxy.py  readme.md
shu/: Cargo.toml
shu/src/: main.rs
simple_python_proxy/: proxy.py
simple_python_proxy/flake/: flake.nix  result
src/: config.rs  flake_template.nix  flake_writer.rs  flake_writer.rs.orig  integration_tests.rs  lib.rs  main.rs  main.rs.orig  maps_duplicate_key_is_error.rs  python_parsing.rs  run.sh  tofu.rs  util.rs  vcs.rs
src/nix/: flake_template.nix  functions.nix
tests/: integration_tests.rs
tests/toml_reorder/: in.toml  should.toml
(+19 files in other folders)
