[package]
name = "anysnake2"
version = "1.12.1"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = {version="1.0.44", features=["backtrace"]}
base64 = "0.13.0"
chrono = "0.4"
clap = "2.33"
ctrlc = {version="3.2.1", features = ["termination"] }
ex = "0.1.3"
indoc="1.0.3"
itertools="0.10"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1"
serde = {version="1.0.130", features = ["derive"]}
serde_json = "1.0"
sha256 = "1.0.2"
stderrlog = "0.5.1"
tempfile = "3.3.0"
terminal_size = "0.1.17"
toml = "0.5"
toml_edit = "0.13.0"
ureq = "2.0"
url = "2.2.2"
whoami = "1.1.5"

[dev-dependencies]
named-lock = "0.1.1"
hex = "0.4"
nix-base32="0.1"
