[package]
name = "anysnake2"
version = "2.1.4"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = {version="1.0.44", features=["backtrace"]}
base64 = "0.21.4"
chrono = "0.4"
clap = "4.4.6"
ctrlc = {version="3.2.1", features = ["termination"] }
ex = "0.1.3"
indoc="2"
itertools="0.11"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1"
serde = {version="1.0.188", features = ["derive"]}
serde_json = "1.0"
sha256 = "1.0.2"
stderrlog = "0.5.1"
tempfile = "3.8.0"
terminal_size = "0.3"
toml = "0.8"
toml_edit = "0.22"
ureq = "2.0"
url = "2.2.2"
version-compare = "0.2.0"

[dependencies.uzers] 
version = "0.11.3"
features = []

[dev-dependencies]
named-lock = "0.3"
hex = "0.4"
nix-base32="0.1"


[profile.dev.package."*"]
debug = false # only have debug symbols for the main package


