[package]
name = "anysnake2"
version = "2.3.2"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = {version="1.0.44", features=["backtrace"]}
clap = "4.5.0"
ctrlc = {version="3.2.1", features = ["termination"] }
ex = "0.1.3"
indoc="2"
itertools="0.14"
jiff = "0.1.29"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1"
serde = {version="1.0.188", features = ["derive"]}
serde_json = "1.0"
sha256 = "1.0.2"
stderrlog = "0.6.0"
tempfile = "3.8.0"
terminal_size = "0.4.1"
toml = "0.8"
toml_edit = "0.22"
ureq = "3.0"
url = "2.5.4"
version-compare = "0.2.0"

[dev-dependencies]
named-lock = "0.3"
hex = "0.4"
# nix-base32="0.1"


[profile.dev.package."*"]
debug = false # only have debug symbols for the main package


